# AccOpsAgent

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  TODO.md  accelerator_agent_architecture.md  main.py  pyproject.toml
accel_agent/: __init__.py  main.py
accel_agent/adapters/: __init__.py  base.py  epics.py  simulator.py  tango.py
accel_agent/cli/: __init__.py  app.py  rendering.py
accel_agent/core/: __init__.py  agent.py  context.py  conversation.py  plan.py  plan_executor.py  react_loop.py  subagent.py
accel_agent/llm/: __init__.py  base.py  litellm_client.py  router.py
accel_agent/safety/: __init__.py  approval.py  audit.py  code_analysis.py  validators.py
accel_agent/sandbox/: __init__.py  namespace.py  subprocess.py
accel_agent/tools/: __init__.py  base.py  execute_code.py  get_parameter.py  launch_display.py  list_scripts.py  propose_plan.py  read_log.py  registry.py  run_script.py  search_device.py  spawn_subagent.py
configs/: default.toml  safety_limits.toml
configs/accelerators/: example_linac.yaml
configs/prompts/: action_generation.yaml  diagnostic_interpretation.yaml  reasoning_planning.yaml  verification.yaml
scripts/: run_agent.py  run_mcp_server.py
src/accops_agent/: __init__.py
src/accops_agent/accelerator_interface/: __init__.py  mcp_backend.py
src/accops_agent/backends/: __init__.py
src/accops_agent/backends/pytao/: __init__.py  backend.py  commands.py  connection.py  parser.py
src/accops_agent/cli/: __init__.py  display.py  input_handler.py
src/accops_agent/config/: __init__.py  loader.py  schema.py
src/accops_agent/diagnostic_control/: __init__.py  data_models.py  interfaces.py  mock_backend.py
src/accops_agent/graph/: __init__.py  builder.py  nodes.py  state.py
src/accops_agent/llm/: __init__.py  client.py  parsers.py  prompts.py
src/accops_agent/mcp_server/: __init__.py  __main__.py  server.py
src/accops_agent/mcp_server/pytao/: __init__.py  backend.py  commands.py  connection.py  parser.py
src/accops_agent/safety/: __init__.py  constraints.py  validators.py
src/accops_agent/utils/: constants.py  exceptions.py
tests/: __init__.py  test_plan.py
tests/integration/: __init__.py  test_pytao_backend.py
tests/unit/: test_cli.py  test_config.py  test_graph_builder.py  test_interfaces.py  test_llm.py  test_mcp_backend.py  test_nodes.py  test_pytao_components.py  test_safety.py  test_state.py
