[project]
name = "accops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "langchain-anthropic>=1.3.1",
    "langgraph>=1.0.6",
    "matplotlib",
    "mcp>=1.0.0",
    "numpy>=2.4.1",
    "openpmd-beamphysics",
    "openai>=2.15.0",
    "pexpect>=4.9.0",
    "pydantic>=2.12.5",
    "pytao>=0.5.7",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tqdm",
]

[project.scripts]
pytao-mcp = "accops_agent.mcp_server:main"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
