[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accel-agent"
version = "0.1.0"
description = "CLI-based ReAct agent for accelerator operators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AccOpsAgent" }]
dependencies = [
    "litellm>=1.50",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
accel-agent = "accel_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["accel_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
